--- a/recipes/recipe.html
+++ b/recipes/recipe.html
@@ -15,7 +15,7 @@
 
     <div class="recipes">
         <div class="recipes-list">
-            <a href=""><img src="/recipes_images/recipe1.jpg" alt="Buffalo Chicken Dip"></a>
+            <a href="recipe1.html"><img src="/recipes_images/recipe1.jpg" alt="Buffalo Chicken Dip"></a>
             <p>Buffalo Chicken Dip</p>
         </div>
         <div class="recipes-list">
