--- a/recipes/recipe.html
+++ b/recipes/recipe.html
@@ -19,11 +19,11 @@
             <p>Buffalo Chicken Dip</p>
         </div>
         <div class="recipes-list">
-            <a href=""><img src="/recipes_images/recipe2.jpg" alt="Turkey Scallopini"></a>
+            <a href="recipe2.html"><img src="/recipes_images/recipe2.jpg" alt="Turkey Scallopini"></a>
             <p>Turkey Scallopini</p>
         </div>
         <div class="recipes-list">
-            <a href=""><img src="/recipes_images/recipe3.jpg" alt="Garlic Chicken with Herbs"></a>
+            <a href="recipe3.html"><img src="/recipes_images/recipe3.jpg" alt="Garlic Chicken with Herbs"></a>
             <p>Garlic Chicken with Herbs</p>
         </div>
 </body>
