Change image source

--- a/recipes/recipe.html
+++ b/recipes/recipe.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header>
-        <img src="/recipes_images/logo.jpg" alt="Original logo">
+        <img src="logo.jpg" alt="Original logo">
         <h1>All Recipes</h1> 
     </header>
 
     <div class="recipes">
         <div class="recipes-list">
-            <a href="recipe1.html"><img src="/recipes_images/recipe1.jpg" alt="Buffalo Chicken Dip"></a>
+            <a href="recipe1.html"><img src="recipe1.jpg" alt="Buffalo Chicken Dip"></a>
             <p>Buffalo Chicken Dip</p>
         </div>
         <div class="recipes-list">
-            <a href="recipe2.html"><img src="/recipes_images/recipe2.jpg" alt="Turkey Scallopini"></a>
+            <a href="recipe2.html"><img src="recipe2.jpg" alt="Turkey Scallopini"></a>
             <p>Turkey Scallopini</p>
         </div>
         <div class="recipes-list">
-            <a href="recipe3.html"><img src="/recipes_images/recipe3.jpg" alt="Garlic Chicken with Herbs"></a>
+            <a href="recipe3.html"><img src="recipe3.jpg" alt="Garlic Chicken with Herbs"></a>
             <p>Garlic Chicken with Herbs</p>
         </div>
 </body>
