Change image source

--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <img src="/recipes_images/logo.jpg" alt="Orignal Logo">
+        <img src="logo.jpg" alt="Orignal Logo">
         <h1 class="recipe_name">Buffalo Chicken Dip</h1>
     </header>
     
     <section id="recipe">
         <div class="recipe-desc">
-            <img src="/recipes_images/recipe1.jpg" alt="Bufallo Chicken Dip">
+            <img src="recipe1.jpg" alt="Bufallo Chicken Dip">
             <div class="instructions">
                 <h2>Ingredients</h2>
             <ul>
