--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <img src="/recipes_images/logo.jpg" alt="Orignal Logo">
+        <img src="logo.jpg" alt="Orignal Logo">
         <h1 class="recipe_name">Turkey Scallopini</h1>
     </header>
     
     <section id="recipe">
         <div class="recipe-desc">
-            <img src="/recipes_images/recipe2.jpg" alt="Turkey Scallopini">
+            <img src="recipe2.jpg" alt="Turkey Scallopini">
             <div class="instructions">
                 <h2>Ingredients</h2>
             <ul>
